--- a/taxonomy/frs102.yaml
+++ b/taxonomy/frs102.yaml
@@ -454,7 +454,8 @@ taxonomy:
 	financial statements.}'
       micro-entity-provisions: '~{accounts-prepared-small-company-regime=These
         financial statements have been prepared in accordance with the
-	micro-entity provisions.}'
+	micro-entity provisions and delivered in accordance with the
+	provisions applicable under the small companies regime.}'
       no-audit-required: '~{members-not-required-audit=The members have
         not required the company to obtain an audit of its financial
 	statements for the accounting period in accordance with section 476.}'
