--- a/config/hmrc/corp-tax.yaml
+++ b/config/hmrc/corp-tax.yaml
@@ -1,174 +1,13 @@
 
 #############################################################################
-### GnuCash accounts source #################################################
-#############################################################################
-accounts:
-  # Filename of GnuCash accounts
-  file: example.gnucash
-
-#############################################################################
 ### Taxonomy configuration ##################################################
 #############################################################################
 # This sets up the iXBRL taxonomy.  There should be a filename and a
 # taxonomy ID.
-taxonomy:
-  file: taxonomy/ct-dpl.yaml
-  id: corptax
+taxonomy: //import taxonomy/ct-dpl.yaml
 
-#############################################################################
-### Report metadata #########################################################
-#############################################################################
-# Metadata used in reports.  Note that some of the metadata here is only
-# referenced from the taxonomy files, so different taxonomies will demand
-# different metadata.
-metadata:
-
-  # Metadata about the business
-  business:
-
-    # Summary of business activities
-    activities: Computer security consultancy and development services
-
-    # Average number of employees over the previous 2 accounting periods
-    average-employees:
-    - 2
-    - 1
-
-    # Business name
-    company-name: Example Biz Ltd.
-
-    # Registered company number
-    company-number: '12345678'
-
-    # VAT registration number
-    vat-registration: GB012345678
-
-    # iXBRL entity scheme, Companies House
-    entity-scheme: http://www.companieshouse.gov.uk/
-
-    # Legal entity formation information
-    company-formation:
-      country: england-and-wales
-      date: '2019-03-01'
-      form: private-limited-company
-
-    # Company contact details
-    contact:
-
-      # Contact name, address, county, location (city), country, email
-      name: Corporate Enquiries
-      address:
-      - 123 Leadbarton Street
-      - Dumpston Trading Estate
-      country: UK
-      county: Minchingshire
-      email: corporate@example.org
-      location: Threapminchington
-
-      # Phone number
-      phone:
-        area: '7900'
-        country: '+44'
-        number: '0123456'
-        type: landline
-      postcode: QQ99 9ZZ
-
-    # Directors of the business
-    directors:
-    - A Bloggs
-    - B Smith
-    - C Jones
-
-    # Industry sector.  Search for uk-bus:MainIndustrySectorDimension in the
-    # taxonomy file.
-    industry-sector: m
-
-    # Is the company dormant?
-    is-dormant: false
-
-    # SIC codes registered with Companies House.
-    sic-codes:
-    - '62020'
-    - '62021'
-
-    # Contact website description and URL
-    website:
-      description: Corporate website
-      url: https://example.org/corporate
-
-  # Report metadata
-  report:
-
-#    pretty-print: true
-
-    # The accounting-standards applied.  One of:
-    #   frs101, frs102, frsse, full-irs, micro-entities, other-standards,
-    #   small-entities-regime.
-    accounting-standards: micro-entities
-
-    # Accounts status, one of:
-    #   audit-exempt-no-accountants-report,
-    #   audit-exempt-with-accountants-report, audited,
-    #   independent-examination, other-reporting-regime
-    accounts-status: audit-exempt-no-accountants-report
-
-    # Accounts type, one of:
-    #   abbreviated-accounts, abridged-accounts, full-accounts
-    accounts-type: abridged-accounts
-
-    # Date report was authorised for issue
-    authorised-date: '2021-01-01'
-
-    # Date of the balance sheet data pull
-    balance-sheet-date: '2020-12-31'
-
-    # Accounts currency
-    currency: GBP
-
-    # Report issue date
-    date: '2021-01-01'
-
-    # Tax years over which the accounts are calculated.  A company's tax year
-    # is defined by the company's accounting period.  This usually falls
-    # across two UK tax years (which start on the 1st April).  This is needed
-    # to allow for a change in tax rates, which are always applied to a tax
-    # year.
-    fy1:
-      name: FY1
-      start: '2020-01-01'
-      end: '2020-03-31'
-    fy2:
-      name: FY2
-      start: '2020-04-01'
-      end: '2020-12-31'
-
-    # Accounting periods
-    periods:
-    - name: '2020'
-      start: '2020-01-01'
-      end: '2020-12-31'
-
-    # Name of director who signed the reports
-    signed-by: B Smith
-
-    # Context segment of the director who signed the report.  director2
-    # means the second director in the list metadata.business.directors.
-    signing-officer: director2
-
-    # Report title
-    title: Corporation tax filing
-
-  # Tax details, used by the Corporation tax profile
-  tax:
-
-    # Unique Taxpayer Reference (HMRC issued)
-    utr: '8596148860'
-
-    # Tax period
-    period:
-      name: '2020'
-      start: '2020-01-01'
-      end: '2020-12-31'
+# CSS style
+style: //import config/style.yaml
 
 #############################################################################
 ### Report computations #####################################################
@@ -526,7 +365,7 @@ computations:
     period: in-year
     input: ct-profits
     whole-period: metadata.report.periods.0
-    proportion-period: metadata.report.fy1
+    proportion-period: metadata.tax.fy1
   segments:
     business-type: company
 
@@ -542,7 +381,7 @@ computations:
     period: in-year
     input: ct-profits
     whole-period: metadata.report.periods.0
-    proportion-period: metadata.report.fy2
+    proportion-period: metadata.tax.fy2
   segments:
     business-type: company
 
